# ev_sdk_demo3.0_pedestrian_intrusion

./: .gitignore  CMakeLists.txt  README.md
config/: algo_config.json
doc/: EV_SDK配置协议说明.md
include/: ji_utils.h
src/: Configuration.hpp  SampleAlgorithm.cpp  SampleAlgorithm.hpp  SampleDetector.cpp  SampleDetector.hpp  ji.cpp
